plugins {
    id 'com.android.application'
    id 'com.google.gms.google-services'
    id 'com.google.firebase.crashlytics'
}

android {
    compileSdkVersion rootProject.SDK_COMPILE_VERSION
    buildToolsVersion rootProject.SDK_BUILD_TOOLS_VERSION

    defaultConfig {
        applicationId "com.robinzon.medicationwizard"
        minSdk rootProject.SDK_MINIMUM_VERSION
        targetSdk rootProject.SDK_TARGET_VERSION
        versionCode rootProject.VERSION_CODE
        versionName rootProject.VERSION_NAME
        multiDexEnabled true
    }

    buildTypes {
        release {
            debuggable false
            // Enables code shrinking, obfuscation, and optimization for only
            // your project's release build type.
            minifyEnabled true
            // Enables resource shrinking, which is performed by the
            // Android Gradle plugin.
            shrinkResources true
            // Includes the default ProGuard rules files that are packaged with
            // the Android Gradle plugin. To learn more, go to the section about
            // R8 configuration files.
            proguardFiles getDefaultProguardFile(
                    'proguard-android-optimize.txt'),
                    'proguard-rules.pro'
        }
        debug {
            debuggable true
            minifyEnabled false
            shrinkResources false
        }
    }
    compileOptions {
        sourceCompatibility JavaVersion.VERSION_1_10
        targetCompatibility JavaVersion.VERSION_1_10
    }
    buildFeatures {
        viewBinding true
    }
    namespace 'com.robinzon.medicationwizard'
}

dependencies {
    implementation(platform("org.jetbrains.kotlin:kotlin-bom:1.8.0"))
    //Ads
    implementation 'com.google.android.gms:play-services-ads:22.1.0'
    implementation 'com.google.firebase:firebase-ads:22.1.0'
    //Material
    implementation 'com.google.android.material:material:1.9.0'
    //Android X
    implementation 'androidx.constraintlayout:constraintlayout:2.1.4'
    implementation 'androidx.appcompat:appcompat:1.6.1'
    implementation 'androidx.navigation:navigation-fragment:2.6.0'
    implementation 'androidx.navigation:navigation-ui:2.6.0'
    //Firebase
    // https://firebase.google.com/docs/android/learn-more#compare-bom-versions
    implementation platform('com.google.firebase:firebase-bom:32.1.1')
    implementation 'com.google.firebase:firebase-analytics'
    implementation 'com.google.firebase:firebase-config'
    implementation 'com.google.firebase:firebase-messaging'
    implementation 'com.google.firebase:firebase-crashlytics'
    implementation 'com.google.firebase:firebase-inappmessaging'
    implementation 'com.google.firebase:firebase-inappmessaging-display'

    implementation 'androidx.appcompat:appcompat:1.6.1'
    implementation 'androidx.constraintlayout:constraintlayout:2.1.4'

    implementation 'com.google.android.gms:play-services-ads:22.1.0'

    implementation 'androidx.lifecycle:lifecycle-runtime:2.6.1'
    implementation 'androidx.lifecycle:lifecycle-process:2.6.1'
    annotationProcessor 'androidx.lifecycle:lifecycle-common-java8:2.6.1'
}